# malunok

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/sin/: main.cc  sin.cc
demos/sin_wall/: main.cc
include/: map_coords.h  sdl.h  sdl_utils.h  x11.h
include/motion_params/: loop.h  loop.ipp  metamove.h  metamove.ipp  move.h  move.ipp  timer.h
src/: map_coords.cc  sdl.cc  sdl_utils.cc  x11.cc
src/motion_params/: timer.cc
